welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:6: error: Missing closing brace `}' assumed here
  }
  ^close10:9: error: Missing closing brace `}' assumed here
 }
 ^